--- a/modules/system/partials/_settings_menu_items.htm
+++ b/modules/system/partials/_settings_menu_items.htm
@@ -74,8 +74,8 @@ system::lang.system.categories.logs
                 </li>
             <?php } ?>
         <?php } ?>
-        <?php echo $category?>
-        <?php if( ($furl_actual && $category == 'rainlab.translate::lang.plugin.name') || ($furl_actual2 && $category == 'rainlab.locale::lang.plugin.name')) { ?>
+      
+        <?php if( ($furl_actual && $category == 'rainlab.translate::lang.plugin.name') || ($furl_actual2 && $category == 'rainlab.translate::lang.plugin.name')) { ?>
                         
                 <li data-group-code="<?= e($category) ?>" <?= $collapsed ? 'data-status="collapsed"' : null ?>>
                     <div class="group">                       
