--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -48,6 +48,11 @@
   font-weight: normal;
   font-style: normal; }
 
+.header_categroy {
+  margin-bottom: 40px; }
+  .header_categroy h1 {
+    font-size: 30px; }
+
 .send-info:not(:has(a)) {
   display: none !important; }
 
