--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2388,3 +2388,10 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     display: none;
   }
 }
+
+.header_categroy {
+  margin-bottom: 40px;
+  h1 {
+    font-size: 30px;
+  }
+}
