--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5686,3 +5686,6 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   margin-bottom: 40px; }
   .header_categroy h1 {
     font-size: 30px; }
+
+.relative.toolbar-item.loading-indicator-container.size-input-text {
+  display: none !important; }
