--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2395,3 +2395,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     font-size: 30px;
   }
 }
+
+.relative.toolbar-item.loading-indicator-container.size-input-text {
+  display: none !important;
+}
