--- a/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
@@ -153,7 +153,7 @@
 
             <?php if ($subtemplate == 'playas') { ?>
 
-                <a  class='duplicate' data-type='playa' data-request='onCopyPage' data-request-data="fileType: 'playa', fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
+                <a  class='duplicate-page' data-type='playa' data-request='onCopyPage' data-request-data="fileType: 'playa', fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
 
 
                     <img data-toggle="tooltip
@@ -167,7 +167,7 @@
 
             <?php if ($subtemplate == 'municipios') { ?>
 
-                <a  class='duplicate' data-type='municipio' data-request='onCopyPage' data-request-data="fileType: 'municipio', fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
+                <a  class='duplicate-page' data-type='municipio' data-request='onCopyPage' data-request-data="fileType: 'municipio', fileNamePost: '<?= e($fileName) ?>' , fileUrlPost: '<?= $pageObj->page->getViewBag()->property('url') ?>', fileTitlePost: '<?= $pageObj->page->getViewBag()->property('title') ?>'">
 
 
                     <img data-toggle="tooltip
