--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5567,6 +5567,16 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     width: 17px;
     height: auto; }
 
+.duplicate-page {
+  position: absolute;
+  z-index: 10;
+  top: 11px;
+  right: 18px;
+  cursor: pointer; }
+  .duplicate-page img {
+    width: 17px;
+    height: auto; }
+
 /* CUSTOM EDITOR TOOLBAR */
 .custom-wysiwyg {
   width: 38px;
