--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2413,8 +2413,6 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
 }
 
-.list-footer > .list-pagination {
-  .select2 .select2-container .select2-container--default .select2-container--above .select2-container--focus {
+  .control-pagination .select2-container {
     height: 30px !important;
   }
-}
