--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2415,4 +2415,9 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 
   .control-pagination .select2-container {
     height: 30px !important;
+    background-color: #F9F9F9 !important;
+    color: #98a7a8 !important;
+    .select2-container--default .select2-selection--single .select2-selection__rendered {
+      color: #98a7a8 !important;
+    }
   }
