--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5707,3 +5707,14 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   color: #98a7a8 !important; }
   .control-pagination .select2-container .select2-container--default .select2-selection--single .select2-selection__rendered {
     color: #98a7a8 !important; }
+
+/*  Modal loading */
+#MModal img {
+  width: 35px;
+  height: 35px;
+  display: block;
+  margin: 0px auto 20px auto; }
+
+#MModal span {
+  color: #999999;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important; }
