--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2421,3 +2421,17 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
       color: #98a7a8 !important;
     }
   }
+
+  /*  Modal loading */
+  #MModal {
+    img {
+      width: 35px;
+      height: 35px;
+      display: block;
+      margin: 0px auto 20px auto;
+    }
+    span {
+      color: #999999;
+      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
+    }
+  }
