--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2428,10 +2428,17 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
       width: 35px;
       height: 35px;
       display: block;
-      margin: 0px auto 20px auto;
+      margin: 0px auto 11px auto;
     }
     span {
       color: #999999;
       font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
+      font-weight: 500;
+    }
+  }
+
+  .loading {
+    .layout.control-tabs.oc-logo-transparent:not(.has-tabs), .flex-layout-column.oc-logo-transparent:not(.has-tabs), .layout-cell.oc-logo-transparent {
+      background-image: none !important;
     }
   }
