--- a/modules/backend/layouts/default.htm
+++ b/modules/backend/layouts/default.htm
@@ -41,7 +41,14 @@
 
                             <div class="layout-relative">
                               <div id="MModal" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 999; display: none;">
-                                  <img src="/modules/backend/assets/images/dualring.svg" alt="">
+                                  <div class="centered">
+                                      <div class="">
+                                        <img src="/modules/backend/assets/images/dualring.svg" alt="">
+                                      </div>
+                                      <div class="span-container">
+
+                                      </div>
+                                  </div>
                               </div>
                                 <div class="layout">
                                     <?php if ($breadcrumbContent = Block::placeholder('breadcrumb')): ?>
