--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5709,16 +5709,28 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     color: #98a7a8 !important; }
 
 /*  Modal loading */
-#MModal img {
-  width: 35px;
-  height: 35px;
-  display: block;
-  margin: 0px auto 11px auto; }
-
-#MModal span {
-  color: #999999;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
-  font-weight: 500; }
+#MModal {
+  width: 100%;
+  height: 100%;
+  text-align: center; }
+  #MModal .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center; }
+  #MModal img {
+    width: 35px;
+    height: 35px;
+    display: block;
+    margin: 0px auto 11px auto; }
+  #MModal span {
+    color: #999999;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
+    font-weight: 500; }
 
 .loading .layout.control-tabs.oc-logo-transparent:not(.has-tabs), .loading .flex-layout-column.oc-logo-transparent:not(.has-tabs), .loading .layout-cell.oc-logo-transparent {
   background-image: none !important; }
