--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5712,7 +5712,8 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 #MModal {
   width: 100%;
   height: 100%;
-  text-align: center; }
+  text-align: center;
+  background-color: white; }
   #MModal .centered {
     position: absolute;
     top: 50%;
@@ -5731,6 +5732,3 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     color: #999999;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
     font-weight: 500; }
-
-.loading .layout.control-tabs.oc-logo-transparent:not(.has-tabs), .loading .flex-layout-column.oc-logo-transparent:not(.has-tabs), .loading .layout-cell.oc-logo-transparent {
-  background-image: none !important; }
