--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2427,6 +2427,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     width: 100%;
     height: 100%;
     text-align: center;
+    background-color: white;
     .centered {
       position: absolute;
       top: 50%;
@@ -2447,11 +2448,5 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
       color: #999999;
       font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
       font-weight: 500;
-    }
-  }
-
-  .loading {
-    .layout.control-tabs.oc-logo-transparent:not(.has-tabs), .flex-layout-column.oc-logo-transparent:not(.has-tabs), .layout-cell.oc-logo-transparent {
-      background-image: none !important;
     }
   }
