--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -115,7 +115,26 @@
                             </a>
                         </li>
 
-                        <?php }elseif ( $item->iconSvg != 'modules/system/assets/images/cog-icon.svg' && $item->iconSvg != 'modules/cms/assets/images/cms-icon.svg'){?>
+                        <?php } 
+
+                        if( $item->iconSvg == 'modules/system/assets/images/estadisticas.svg' and ($this->user->login == 'Roberto_cadiz' || $this->user->login == 'admin') ){ ?>
+
+                        <li class="svg-icon-container svg-active-effects">
+                            <a href="<?= $item->url ?>">
+                                <span class="nav-icon">
+                                    <?php if ($item->iconSvg): ?>
+                                        <img class="svg-icon" src="<?= URL::asset($item->iconSvg) ?>">
+                                    <?php endif ?>
+                                    <i class="<?= $item->iconSvg ? 'svg-replace' : null ?> <?= $item->icon ?>"></i>
+                                </span>
+
+                                <span class="nav-label">
+                                    <?= e(trans($item->label)) ?>
+                                </span>
+                            </a>
+                        </li>
+
+                        <?php } elseif ( $item->iconSvg != 'modules/system/assets/images/cog-icon.svg' && $item->iconSvg != 'modules/cms/assets/images/cms-icon.svg' && $item->iconSvg != 'modules/cms/assets/images/estadisticas.svg'){?>
 
                         <li class="svg-icon-container svg-active-effects">
                             <a href="<?= $item->url ?>">
