--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -451,7 +451,7 @@
   background-color: white;
   z-index: 100; }
   .section-txt .cartel {
-    width: 100%;
+    width: 100% !important;
     height: auto;
     object-fit: cover;
     margin-top: 50px;
