--- a/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
@@ -42,6 +42,7 @@
             class="<?= $pageObj->subpages ? 'has-subitems' : null ?>"
             data-status="collapsed"
             data-status="<?= $groupStatus || !$pageObj->subpages ? 'expanded' : 'collapsed' ?>"
+            data-group-id="<?= e($fileName) ?>"
             data-item-path="<?= e($fileName) ?>"
             <?php if ($searchMode): ?>data-no-drag-mode<?php endif ?>
             data-id="<?= e($dataId) ?>"
