--- a/themes/default/partials/reports.htm
+++ b/themes/default/partials/reports.htm
@@ -3,6 +3,8 @@
 
 	function onStart()
 	{
+	 	dd('hola');
+	 	
 	 	if (strpos($_SERVER['HTTP_HOST'], 'localhost') !== false) {
 	      	$this['preurl'] = '/cadizturismo';
 	    } else {
