--- a/themes/default/partials/reports.htm
+++ b/themes/default/partials/reports.htm
@@ -3,8 +3,8 @@
 
 	function onStart()
 	{
-	 	dd('hola');
-	 	
+	 	die('hola');
+
 	 	if (strpos($_SERVER['HTTP_HOST'], 'localhost') !== false) {
 	      	$this['preurl'] = '/cadizturismo';
 	    } else {
