--- a/themes/default/partials/reports.htm
+++ b/themes/default/partials/reports.htm
@@ -3,7 +3,8 @@
 
 	function onStart()
 	{
-	 	die('hola');
+	 	echo "hola333";
+	 	die('hola333');
 
 	 	if (strpos($_SERVER['HTTP_HOST'], 'localhost') !== false) {
 	      	$this['preurl'] = '/cadizturismo';
