--- a/themes/default/layouts/reportaje.htm
+++ b/themes/default/layouts/reportaje.htm
@@ -128,6 +128,7 @@ code = "redes-sociales"
     <link rel="mask-icon" href="{{url('/')}}/plugins/rainlab/pages/assets/img/favicons/safari-pinned-tab.svg" color="#175DA3">
     <meta name="theme-color" content="#175DA3">
 </head>
+<span>vvvvvvvvvvvvvvvvvvvvv2222222222222</span>
     {% partial 'device-rotate' %}
     {% partial 'site/header' %}
 
