--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3455,7 +3455,7 @@ html, body {
   .ayuda-header, .static-header, .about-header {
     .img-header {
       top: 0px !important;
-      height: 100vh !important;
+      min-height: 100vh !important;
     }
   }
   .header .mini-logo-container, .header-event .mini-logo-container, .header-experience .mini-logo-container, .header-village .mini-logo-container, .header-general .mini-logo-container, .header-ruta .mini-logo-container, .header-search .mini-logo-container {
