--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -38,7 +38,6 @@ layout = "free"
         }
 
         .img-container img {
-            width: 100%;
             height: 100%;
             object-fit: cover;
         }
@@ -67,7 +66,8 @@ layout = "free"
             font-weight: bold;
             color: #4A4A4A;
             letter-spacing: 0;
-            width: 70%;
+            width: 90%;
+            max-width: 380px;
         }
 
         .panel p {
@@ -76,7 +76,8 @@ layout = "free"
             letter-spacing: 0;
             line-height: 20px;
             font-weight: 100;
-            width: 75%;
+            width: 90%;
+            max-width: 360px;
         }
 
          .ask {
