--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -37,13 +37,12 @@ layout = "free"
           height: 430px;
         }
 
-        .img-container img {
-            height: 100%;
-            object-fit: cover;
-        }
-
         .logo img {
             margin: 36px 0px 0px 40px;
+        }
+
+        .img-container img {
+          margin: 10px auto 10px auto;
         }
 
         .panel
@@ -167,7 +166,7 @@ layout = "free"
             <table class="img-container" role="panel" width="600" height="353px" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%; height: 353px;">
                 <tr>
                     <td class="img-td" align="center" valign="top" >
-                      <img src="{{experience.urlApp}}{{experience.cover}}"/>
+                      <img style="width: 100%; max-width: 600px;" src="{{experience.urlApp}}{{experience.cover}}"/>
                     </td>
                 </tr>
             </table>
