--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -165,7 +165,7 @@ layout = "free"
 
             <table class="img-container" role="panel" width="600" height="353px" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%; height: 353px;">
                 <tr>
-                    <td class="img-td" align="center" valign="top" >
+                    <td align="center" valign="top" >
                       <img style="width: 100%; max-width: 600px;" src="{{experience.urlApp}}{{experience.cover}}"/>
                     </td>
                 </tr>
