--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -163,7 +163,7 @@ layout = "free"
 
             <!-- Start Grid 2 -->
 
-            <table class="img-container" role="panel" width="600" height="353px" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%; height: 353px;">
+            <table class="img-container" role="panel" width="600" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%;">
                 <tr>
                     <td align="center" valign="top" >
                       <img style="width: 100%; max-width: 600px;" src="{{experience.urlApp}}{{experience.cover}}"/>
