--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -18,13 +18,23 @@
 
 	{% endfor %}
 </ul> -->
-<div id="st-empresas" class="search-title-container">
+
+
+<!-- <div id="st-empresas" class="search-title-container">
 	{% if empresas|length > 1 %}
 	<p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empresas|length}} {{ 'empresas que se adaptan a ti'|_ }}.</p>
 	{% else %}
 	 <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empresas|length}} {{ 'empresa que se adapta a ti'|_ }}.</p>
 	{% endif %}
-</div>
+</div>  -->
+
+<div id="st-empresas" class="search-title-container">
+	{% if empcount > 1 %}
+	<p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empcount}} {{ 'empresas que se adaptan a ti'|_ }}.</p>
+	{% else %}
+	 <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empcount}} {{ 'empresa que se adapta a ti'|_ }}.</p>
+	{% endif %}
+</div>	
 <div id="all-empresas" class="all-events-container">
 	{% for empresa in empresas %}
 
